[project]
name = "comfyui_fft"
description = "Perform a Fast Fourier Transform on the image, and then users can freely select the filtering range to filter the image. The main function is to remove the grid patterns on the image, and it can also perform high-pass filtering and low-pass filtering. The detailed workflow is shown in the figure below. The PNG file contains the ComfyUI workflow.The working principle is similar to the FFT filter in Photoshop."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/fssorc/ComfyUI_FFT"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_FFT"
Icon = ""
